Fixe le problème d'overflow sur le header et l'icon de déconnexion

--- a/app/assets/stylesheets/admin/_header.scss
+++ b/app/assets/stylesheets/admin/_header.scss
@@ -3,7 +3,6 @@
   display: table;
   height: 64px;
   padding: 0.6rem 1.9rem;
-  overflow-x: hidden;
   text-shadow: none;
   border-bottom: 0;
   box-shadow: none;
@@ -73,6 +72,7 @@
     height: 31px;
     padding: 0 1rem;
     margin: 0.38rem 0;
+    overflow: hidden;
     border-radius: 1.9rem;
     background-color: #fff;
     a {
@@ -90,12 +90,12 @@
     }
     #logout {
       a {
-        width: 23px;
+        width: 1.8rem;
         padding: 0.38rem 0;
         display: inline-block;
         color: transparent;
         background: asset-data-url('deconnexion.svg') no-repeat center right;
-        background-size: 23px 15px;
+        background-size: contain;
       }
     }
   }
